<resources>
    <string name="app_name">PDM_2021_I_L1_LABORATORIO1</string>
    <string name="cobrar_enee">Cobrar ENEE</string>
    <string name="cobrar_sanaa">Cobrar SANAA</string>
    <string name="recarga_tigo">Recarga TIGO</string>
    <string name="recarga_claro">Recarga CLARO</string>
    <string name="retirar_dinero">Retirar Dinero</string>
    <string name="enviar_transferencia">Enviar Transferencia</string>
    <string name="regresar">Regresar</string>
    <string name="monto_a_retirar">Monto a Retirar</string>
    <string name="ingrese_su_numero_de_cuenta">Ingrese su numero de cuenta</string>
    <string name="enviar">enviar</string>
    <string name="textview">TextView</string>
    <string name="cuenta_de_origen">Cuenta de origen</string>
    <string name="nombre_de_origen">Nombre de origen</string>
    <string name="identidad">Identidad</string>
    <string name="nombre_destino">Nombre Destino</string>
    <string name="cuenta_destino">Cuenta destino</string>
    <string name="felicidades_realizaste_con_exito_tu_transaccion">Felicidades Realizaste con éxito tu Transacción</string>
    <string name="clave_primaria">Clave Primaria</string>
    <string name="numero_de_factura">Numero de Factura</string>
    <string name="monto_a_pagar">Monto a Pagar</string>
    <string name="concepto">Concepto</string>
    <string name="enviar_pago">Enviar Pago</string>
    <string name="cuenta_a_debitar">Cuenta a debitar</string>
    <string name="no_contrato">No. Contrato</string>
    <string name="facturas">Facturas</string>
    <string name="super_recarga">Super Recarga</string>
    <string name="recarga">Recarga</string>
    <string name="numerotelefono">Numero Telefono</string>
    <string name="numero_telefono">Numero Telefono</string>
    <string name="cantidad_recarga">Cantidad Recarga</string>
    <string name="cantidad_super">Cantidad Super</string>

</resources>