<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnviarTransferenciaActivity">

    <Button
        android:id="@+id/btnRegresarTransferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toEndOf="@+id/btnEnviarTransferencia"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cuenta_de_origen"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintStart_toStartOf="@+id/editTextNumber" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreOrigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nombre_de_origen"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreOrigen"
        app:layout_constraintStart_toStartOf="@+id/txtNombreOrigen" />

    <EditText
        android:id="@+id/txtCuentaDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreOrigen" />

    <TextView
        android:id="@+id/txvNombreDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="11dp"
        android:text="@string/nombre_destino"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreDestino"
        app:layout_constraintEnd_toEndOf="@+id/txtNombreDestino" />

    <EditText
        android:id="@+id/txvIdentidadDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCuentaDestino" />

    <EditText
        android:id="@+id/txtNombreDestino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvIdentidadDestino" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cuenta_destino"
        app:layout_constraintBottom_toTopOf="@+id/txtCuentaDestino"
        app:layout_constraintEnd_toEndOf="@+id/txtCuentaDestino" />

    <TextView
        android:id="@+id/txvIdentidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/identidad"
        app:layout_constraintBottom_toTopOf="@+id/txvIdentidadDestino"
        app:layout_constraintEnd_toEndOf="@+id/txvIdentidadDestino" />

    <Button
        android:id="@+id/btnEnviarTransferencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="63dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRegresarTransferencia"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>